kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellotomcat
  labels:
    app: hellotomcat
spec:
  replicas: 10
  selector:
    matchLabels:
      app: hellotomcat
  template:
    metadata:
      labels:
        app: hellotomcat
    spec:
      containers:
      - name: hellotomcat-container
        image: quay.io/sunix/hello-tomcat
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: hellotomcat-service
spec:
  type: NodePort
  selector:
    app: hellotomcat
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
