ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellotomcat-ingress
  labels:
    app: hellotomcat
spec:
  rules:
    - host: 192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hellotomcat-service
                port:
                  number: 8080
